# AI_KANBAN_With_Docker

./: .dockerignore  AGENTS.md  Dockerfile  docker-compose.yml  review.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai.py  board.py  db.py  main.py
backend/data/: pm.sqlite3
backend/tests/: test_ai.py  test_board.py  test_db.py  test_main.py
docs/: DB.md  PLAN.md
frontend/: AGENTS.md  playwright.config.ts
frontend/scripts/: start-e2e.mjs
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1
